MEN-5405 Build source packages
ChangeLog:title
Signed-off-by: Peter Grzybowski <peter@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,27 +65,6 @@ stages:
     paths:
       - checksums
 
-build:image:debian:buster:amd64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:debian:buster:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:debian:buster:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "arm64"
-  extends: .template:build:image
-
 build:image:debian:bullseye:amd64:
   variables:
     DISTRO: "debian"
@@ -93,67 +72,13 @@ build:image:debian:bullseye:amd64:
     ARCH: "amd64"
   extends: .template:build:image
 
-build:image:debian:bullseye:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:debian:bullseye:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "arm64"
-  extends: .template:build:image
-
-build:image:ubuntu:bionic:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:ubuntu:bionic:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:ubuntu:bionic:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "arm64"
-  extends: .template:build:image
-
-build:image:ubuntu:focal:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:ubuntu:focal:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:ubuntu:focal:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "arm64"
-  extends: .template:build:image
-
 .template:build:packages:
   stage: build:packages
   image: docker:git
   services:
     - docker:dind
+  tags:
+    - mender-qa-slave-highcpu
   before_script:
     - apk --update --no-cache add bash curl aws-cli
     - eval "$(curl https://raw.githubusercontent.com/mendersoftware/mendertesting/master/mender-ci-common.sh)"
@@ -172,33 +97,6 @@ build:image:ubuntu:focal:arm64:
     paths:
       - output/*
 
-build:packages:debian:buster:amd64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "amd64"
-  dependencies:
-    - build:image:debian:buster:amd64
-  extends: .template:build:packages
-
-build:packages:debian:buster:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:debian:buster:armhf
-  extends: .template:build:packages
-
-build:packages:debian:buster:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:debian:buster:arm64
-  extends: .template:build:packages
-
 build:packages:debian:bullseye:amd64:
   variables:
     DISTRO: "debian"
@@ -208,77 +106,6 @@ build:packages:debian:bullseye:amd64:
     - build:image:debian:bullseye:amd64
   extends: .template:build:packages
 
-build:packages:debian:bullseye:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:debian:bullseye:armhf
-  extends: .template:build:packages
-
-build:packages:debian:bullseye:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:debian:bullseye:arm64
-  extends: .template:build:packages
-
-build:packages:ubuntu:bionic:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "amd64"
-  dependencies:
-    - build:image:ubuntu:bionic:amd64
-  extends: .template:build:packages
-
-build:packages:ubuntu:bionic:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:ubuntu:bionic:armhf
-  extends: .template:build:packages
-
-build:packages:ubuntu:bionic:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:ubuntu:bionic:arm64
-  extends: .template:build:packages
-
-build:packages:ubuntu:focal:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "amd64"
-  dependencies:
-    - build:image:ubuntu:focal:amd64
-  extends: .template:build:packages
-
-build:packages:ubuntu:focal:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:ubuntu:focal:armhf
-  extends: .template:build:packages
-
-build:packages:ubuntu:focal:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:ubuntu:focal:arm64
-  extends: .template:build:packages
 
 test:check-commits:
   only:
@@ -293,271 +120,3 @@ test:check-python3-formatting:
   rules:
     - if: '$TEST_MENDER_DIST_PACKAGES == "true"'
 
-test:acceptance:
-  rules:
-    - if: '$TEST_MENDER_DIST_PACKAGES == "true"'
-  stage: test
-  image: docker:19.03-dind
-  tags:
-    - mender-qa-slave
-  dependencies:
-    # Note that we are only testing packages from Debian buster
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
-  before_script:
-    # DinD setup in mender-qa-slave
-    - unset DOCKER_HOST
-    - unset DOCKER_TLS_VERIFY
-    - unset DOCKER_CERT_PATH
-    # Start dockerd in the background
-    - /usr/local/bin/dockerd &
-    # Wait for dockerd to start
-    - |-
-      MAX_WAIT=30
-      while [ ! -e "/var/run/docker.sock" ] && [ $MAX_WAIT -gt 0 ]; do
-        MAX_WAIT=$(($MAX_WAIT - 1))
-        sleep 1
-      done
-    # Verify that the docker server is up and running
-    - docker version
-    # Git submodules
-    - apk --update --no-cache add git
-    - git submodule sync --recursive
-    - git submodule update --init --recursive
-  script:
-    - apk --update --no-cache add python3 py3-pip gcc openssh make openssl-dev
-      libffi-dev libc-dev python3-dev bash musl-dev rust cargo
-    - cd tests
-    - pip3 install -r requirements.txt
-    - python3 -m pytest -v
-      --mender-client-version $MENDER_VERSION
-      --mender-client-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-client-deb-version)
-      --mender-connect-version $MENDER_CONNECT_VERSION
-      --mender-connect-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-connect-deb-version)
-      --mender-configure-version $MENDER_CONFIGURE_VERSION
-      --mender-configure-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-configure-deb-version)
-    - |-
-        if [ -f ${CI_PROJECT_DIR}/output/commercial/mender-gateway-deb-version ] && \
-           [ -f ${CI_PROJECT_DIR}/output/commercial/mender-monitor-deb-version ]; then
-          python3 -m pytest -v \
-            --mender-client-version $MENDER_VERSION \
-            --mender-client-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-client-deb-version) \
-            --mender-connect-version $MENDER_CONNECT_VERSION \
-            --mender-connect-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-connect-deb-version) \
-            --mender-configure-version $MENDER_CONFIGURE_VERSION \
-            --mender-configure-deb-version $(cat ${CI_PROJECT_DIR}/output/opensource/mender-configure-deb-version) \
-            --mender-gateway-version $MENDER_GATEWAY_VERSION \
-            --mender-gateway-deb-version $(cat ${CI_PROJECT_DIR}/output/commercial/mender-gateway-deb-version) \
-            --mender-monitor-version $MENDER_MONITOR_VERSION \
-            --mender-monitor-deb-version $(cat ${CI_PROJECT_DIR}/output/commercial/mender-monitor-deb-version) \
-            --commercial-tests
-        fi
-
-.publish_helper_functions: &publish_helper_functions |
-  # Bash function to check if the string is a final tag
-  function is_final_tag () {
-    version="$1"
-    [[ "${version}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && return 0 || return $?
-  }
-  # Bash function to check if the string is a build tag
-  function is_build_tag () {
-    version="$1"
-    [[ "${version}" =~ ^[0-9]+\.[0-9]+\.[0-9]+-build[0-9]+$ ]] && return 0 || return $?
-  }
-
-.template:publish:s3:apt-repo:
-  stage: publish
-  image: debian:buster
-  dependencies:
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-    - build:packages:debian:bullseye:amd64
-    - build:packages:debian:bullseye:armhf
-    - build:packages:debian:bullseye:arm64
-    - build:packages:ubuntu:bionic:amd64
-    - build:packages:ubuntu:bionic:armhf
-    - build:packages:ubuntu:bionic:arm64
-    - build:packages:ubuntu:focal:amd64
-    - build:packages:ubuntu:focal:armhf
-    - build:packages:ubuntu:focal:arm64
-  before_script:
-    - apt update && apt install -yyq awscli
-    # Lock the bucket to block concurrent jobs
-    - while aws s3 ls s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/lock; do
-    -   echo "$S3_BUCKET_REPO_PATH locked, waiting..."
-    -   sleep 10
-    - done
-    - touch lock
-    - aws s3 mv lock s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/lock
-  script:
-    # Upload files: first .buildinfo and .deb, then .changes
-    - for file in $(find output/opensource -name *.buildinfo -o -name *.deb); do
-    -   aws s3 cp $file s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/
-    - done
-    - for file in $(find output/opensource -name *.changes); do
-    -   aws s3 cp $file s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/
-    - done
-  after_script:
-    - aws s3 rm s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/lock
-
-publish:s3:apt-repo:manual:
-  when: manual
-  extends: .template:publish:s3:apt-repo
-
-publish:s3:apt-repo:automatic:
-  rules:
-    - if: '$PUBLISH_MENDER_DIST_PACKAGES_AUTOMATIC == "true"'
-  extends: .template:publish:s3:apt-repo
-
-.template:publish:s3:docs-link:mender-client:
-  stage: publish
-  image: debian:buster
-  dependencies:
-    # Note that we are using the packages from Debian buster
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-  before_script:
-    - apt update && apt install -yyq awscli
-    - deb_version=$(cat output/opensource/mender-client-deb-version)
-  script:
-    - echo "Publishing ${MENDER_VERSION} packages to S3"
-    # For master packages, the Debian version is "0.0~git[iso-date].[git-hash]-1" and we make a copy named "master" for GUI to use
-    - for arch in amd64 arm64 armhf; do
-        aws s3 cp output/opensource/mender-client_${deb_version}_${arch}.deb
-          s3://${S3_BUCKET_NAME}/${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_${deb_version}_${arch}.deb;
-        aws s3api put-object-acl --acl public-read --bucket ${S3_BUCKET_NAME}
-          --key ${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_${deb_version}_${arch}.deb;
-        if [ "${MENDER_VERSION}" == "master" ]; then
-          aws s3 cp output/opensource/mender-client_${deb_version}_${arch}.deb
-            s3://${S3_BUCKET_NAME}/${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_master-1_${arch}.deb;
-          aws s3api put-object-acl --acl public-read --bucket ${S3_BUCKET_NAME}
-            --key ${MENDER_VERSION}/${S3_BUCKET_SUBPATH}/${arch}/mender-client_master-1_${arch}.deb;
-        fi;
-      done
-
-publish:s3:docs-link:mender-client:manual:
-  when: manual
-  extends: .template:publish:s3:docs-link:mender-client
-
-publish:s3:docs-link:mender-client:automatic:
-  rules:
-    - if: '$PUBLISH_MENDER_DIST_PACKAGES_AUTOMATIC == "true"'
-  extends: .template:publish:s3:docs-link:mender-client
-
-.publish-template:s3:scripts:install-mender-sh:
-  stage: publish
-  image: debian:buster
-  before_script:
-    - apt update && apt install -yyq awscli
-  only:
-    changes:
-      - scripts/install-mender.sh
-
-publish:staging:s3:scripts:install-mender-sh:
-  extends: .publish-template:s3:scripts:install-mender-sh
-  script:
-    - echo "Publishing install-mender.sh to S3 (staging)"
-    - aws s3 cp scripts/install-mender.sh s3://$S3_BUCKET_NAME/$S3_BUCKET_SCRIPTS_PATH/staging/install-mender.sh --content-type text/plain
-    - aws s3api put-object-acl --acl public-read --bucket ${S3_BUCKET_NAME} --key ${S3_BUCKET_SCRIPTS_PATH}/staging/install-mender.sh
-  only:
-    refs:
-      - master
-
-publish:production:s3:scripts:install-mender-sh:
-  extends: .publish-template:s3:scripts:install-mender-sh
-  script:
-    - echo "Publishing install-mender.sh to S3 (production)"
-    - aws s3 cp scripts/install-mender.sh s3://$S3_BUCKET_NAME/$S3_BUCKET_SCRIPTS_PATH/install-mender.sh --content-type text/plain
-    - aws s3api put-object-acl --acl public-read --bucket ${S3_BUCKET_NAME} --key ${S3_BUCKET_SCRIPTS_PATH}/install-mender.sh
-  only:
-    refs:
-      - production
-
-.template:publish:s3:mender-monitor:
-  stage: publish
-  image: debian:buster
-  dependencies:
-    # Note that we are using the packages from Debian buster
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-  before_script:
-    - apt update && apt install -yyq awscli
-    - *publish_helper_functions
-  script:
-    - echo "Publishing mender-monitor version ${MENDER_MONITOR_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/"
-    - aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/
-    - if test -f output/commercial/mender-monitor-demo*.deb; then
-    -   echo "Publishing mender-monitor-demo version ${MENDER_MONITOR_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/"
-    -   aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/
-    - fi
-    # Make copies in known destinations to be consumed by get.mender.io script:
-    # * For "experimental" channel, we make a copy of the newest master package in the master directory
-    # * For "stable" channel, we make a copy in a separate "latest" subdirectory of the latest tagged version
-
-    # Needs to be reworked, see MEN-5029
-    # - if is_build_tag ${MENDER_MONITOR_VERSION} || [ "${MENDER_MONITOR_VERSION}" == "master" ]; then
-    # -   aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/master/mender-monitor_master-1_all.deb
-    # -   if test -f output/commercial/mender-monitor-demo*.deb; then
-    # -     aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/master/mender-monitor-demo_master-1_all.deb
-    # -  fi
-    # - fi
-    # - if is_final_tag ${MENDER_MONITOR_VERSION}; then
-    # -   aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/latest/mender-monitor_latest-1_all.deb
-    # -   if test -f output/commercial/mender-monitor-demo*.deb; then
-    # -     aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/latest/mender-monitor-demo_latest-1_all.deb
-    # -   fi
-    # - fi
-
-publish:s3:mender-monitor:manual:
-  when: manual
-  extends: .template:publish:s3:mender-monitor
-
-publish:s3:mender-monitor:automatic:
-  rules:
-    - if: '$PUBLISH_MENDER_DIST_PACKAGES_AUTOMATIC == "true"'
-  extends: .template:publish:s3:mender-monitor
-
-.template:publish:s3:mender-gateway:
-  stage: publish
-  image: debian:buster
-  dependencies:
-    # Note that we are using the packages from Debian buster
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-  before_script:
-    - apt update && apt install -yyq awscli
-    - *publish_helper_functions
-  script:
-    - echo "Publishing mender-gateway version ${MENDER_GATEWAY_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/${MENDER_GATEWAY_VERSION}/"
-    - aws s3 cp output/commercial/ s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/${MENDER_GATEWAY_VERSION}/ --recursive --exclude "*" --include "mender-gateway*.deb"
-    # Make copies in known destinations to be consumed by get.mender.io script:
-    # * For "experimental" channel, we make a copy of the newest master package in the master directory
-    # * For "stable" channel, we make a copy in a separate "latest" subdirectory of the latest tagged version
-
-    # Needs to be reworked, see MEN-5029
-    # - if is_build_tag ${MENDER_GATEWAY_VERSION} || [ "${MENDER_GATEWAY_VERSION}" == "master" ]; then
-    # -   for arch in amd64 arm64 armhf; do
-    # -     aws s3 cp output/commercial/mender-gateway*_${arch}.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/master/mender-gateway_master-1_${arch}.deb
-    # -  done
-    # - fi
-    # - if is_final_tag ${MENDER_GATEWAY_VERSION}; then
-    # -   for arch in amd64 arm64 armhf; do
-    # -     aws s3 cp output/commercial/mender-gateway*_${arch}.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/latest/mender-gateway_latest-1_${arch}.deb
-    # -   done
-    # - fi
-
-publish:s3:mender-gateway:manual:
-  when: manual
-  extends: .template:publish:s3:mender-gateway
-
-publish:s3:mender-gateway:automatic:
-  rules:
-    - if: '$PUBLISH_MENDER_DIST_PACKAGES_AUTOMATIC == "true"'
-  extends: .template:publish:s3:mender-gateway
