--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -4,3 +4,8 @@
 addopts = --capture=no
 markers =
     commercial: Run the commercial debian package tests with the flag --commercial-tests yes
+    min_mender_client_version: Required version of mender-client to run the test
+    min_mender_connect_version: Required version of mender-connect to run the test
+    min_mender_configure_version: Required version of mender-configure to run the test
+    min_mender_monitor_version: Required version of mender-monitor to run the test
+    min_mender_gateway_version: Required version of mender-gateway to run the test
