--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -482,33 +482,34 @@ publish:production:s3:scripts:install-mender-sh:
     refs:
       - production
 
-.template:publish:s3:mender-monitor:
+.template:publish:s3:
   stage: publish
   image: debian:buster
   dependencies:
-    # Note that we are using the packages from Debian buster
     - build:packages:debian:buster:amd64
     - build:packages:debian:buster:armhf
     - build:packages:debian:buster:arm64
+    - build:packages:debian:bullseye:amd64
+    - build:packages:debian:bullseye:armhf
+    - build:packages:debian:bullseye:arm64
+    - build:packages:ubuntu:bionic:amd64
+    - build:packages:ubuntu:bionic:armhf
+    - build:packages:ubuntu:bionic:arm64
+    - build:packages:ubuntu:focal:amd64
+    - build:packages:ubuntu:focal:armhf
+    - build:packages:ubuntu:focal:arm64
   before_script:
     - apt update && apt install -yyq awscli
     - *publish_helper_functions
   script:
-    - echo "Publishing mender-monitor version ${MENDER_MONITOR_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/"
-    - aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/
-    - if test -f output/commercial/mender-monitor-demo*.deb; then
-    -   echo "Publishing mender-monitor-demo version ${MENDER_MONITOR_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/"
-    -   aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/${MENDER_MONITOR_VERSION}/
-    - fi
-    # Make copies in known destinations to be consumed by get.mender.io script:
-    # * For "experimental" channel, we make a copy of the newest master package in the master directory
-    # * For "stable" channel, we make a copy in a separate "latest" subdirectory of the latest tagged version
-    - if [ "${MENDER_MONITOR_VERSION}" == "master" ]; then
-    -   aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/master/mender-monitor_master-1+debian+buster_all.deb
-    -   if test -f output/commercial/mender-monitor-demo*.deb; then
-    -     aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/master/mender-monitor-demo_master-1+debian+buster_all.deb
-    -  fi
-    - fi
+    - echo "Publishing ${PUBLISH_PACKAGE_PREFIX} version ${PUBLISH_PACKAGE_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${PUBLISH_PACKAGE_S3_SUBPATH}/${PUBLISH_PACKAGE_VERSION}/"
+    - find output/commercial -name "${PUBLISH_PACKAGE_PREFIX}*.deb" | while read -r file; do
+    -   aws s3 cp "$file" s3://${S3_BUCKET_NAME_PRIVATE}/${PUBLISH_PACKAGE_S3_SUBPATH}/${PUBLISH_PACKAGE_VERSION}/
+    #   Make copy for "master" to be consumed by get.mender.io script:
+    -   if [ "${PUBLISH_PACKAGE_VERSION}" == "master" ]; then
+    -     copy_filename=$(basename "$file" | sed 's/_[^\+]*/_master-1/; s/\+builder[^_]*//')
+    -     aws s3 cp "$file" s3://${S3_BUCKET_NAME_PRIVATE}/${PUBLISH_PACKAGE_S3_SUBPATH}/${PUBLISH_PACKAGE_VERSION}/${copy_filename}
+    - done
     # Publishing the "latest" package needs to be reworked, see MEN-5029
     # - if is_final_tag ${MENDER_MONITOR_VERSION}; then
     # -   aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/latest/mender-monitor_latest-1_all.deb
@@ -516,6 +517,13 @@ publish:production:s3:scripts:install-mender-sh:
     # -     aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/latest/mender-monitor-demo_latest-1_all.deb
     # -   fi
     # - fi
+
+.template:publish:s3:mender-monitor:
+  variables:
+    PUBLISH_PACKAGE_PREFIX: "mender-monitor"
+    PUBLISH_PACKAGE_VERSION: "$MENDER_MONITOR_VERSION"
+    PUBLISH_PACKAGE_S3_SUBPATH: "$S3_BUCKET_SUBPATH_MONITOR"
+  extends: .template:publish:s3
 
 publish:s3:mender-monitor:manual:
   when: manual
@@ -527,33 +535,11 @@ publish:s3:mender-monitor:automatic:
   extends: .template:publish:s3:mender-monitor
 
 .template:publish:s3:mender-gateway:
-  stage: publish
-  image: debian:buster
-  dependencies:
-    # Note that we are using the packages from Debian buster
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-  before_script:
-    - apt update && apt install -yyq awscli
-    - *publish_helper_functions
-  script:
-    - echo "Publishing mender-gateway version ${MENDER_GATEWAY_VERSION} to s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/${MENDER_GATEWAY_VERSION}/"
-    - aws s3 cp output/commercial/ s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/${MENDER_GATEWAY_VERSION}/ --recursive --exclude "*" --include "mender-gateway*.deb"
-    # Make copies in known destinations to be consumed by get.mender.io script:
-    # * For "experimental" channel, we make a copy of the newest master package in the master directory
-    # * For "stable" channel, we make a copy in a separate "latest" subdirectory of the latest tagged version
-    - if [ "${MENDER_GATEWAY_VERSION}" == "master" ]; then
-    -   for arch in amd64 arm64 armhf; do
-    -     aws s3 cp output/commercial/mender-gateway*_${arch}.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/master/mender-gateway_master-1+debian+buster_${arch}.deb
-    -  done
-    - fi
-    # Publishing the "latest" package needs to be reworked, see MEN-5029
-    # - if is_final_tag ${MENDER_GATEWAY_VERSION}; then
-    # -   for arch in amd64 arm64 armhf; do
-    # -     aws s3 cp output/commercial/mender-gateway*_${arch}.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_GATEWAY}/latest/mender-gateway_latest-1_${arch}.deb
-    # -   done
-    # - fi
+  variables:
+    PUBLISH_PACKAGE_PREFIX: "mender-gateway"
+    PUBLISH_PACKAGE_VERSION: "$MENDER_GATEWAY_VERSION"
+    PUBLISH_PACKAGE_S3_SUBPATH: "$S3_BUCKET_SUBPATH_GATEWAY"
+  extends: .template:publish:s3
 
 publish:s3:mender-gateway:manual:
   when: manual
