MEN-5029: Add jobs to publish "latest" copies of commercial packages
Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -510,13 +510,6 @@ publish:production:s3:scripts:install-mender-sh:
     -     copy_filename=$(basename "$file" | sed 's/_[^\+]*/_master-1/; s/\+builder[^_]*//')
     -     aws s3 cp "$file" s3://${S3_BUCKET_NAME_PRIVATE}/${PUBLISH_PACKAGE_S3_SUBPATH}/${PUBLISH_PACKAGE_VERSION}/${copy_filename}
     - done
-    # Publishing the "latest" package needs to be reworked, see MEN-5029
-    # - if is_final_tag ${MENDER_MONITOR_VERSION}; then
-    # -   aws s3 cp output/commercial/mender-monitor_*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/latest/mender-monitor_latest-1_all.deb
-    # -   if test -f output/commercial/mender-monitor-demo*.deb; then
-    # -     aws s3 cp output/commercial/mender-monitor-demo*.deb s3://${S3_BUCKET_NAME_PRIVATE}/${S3_BUCKET_SUBPATH_MONITOR}/latest/mender-monitor-demo_latest-1_all.deb
-    # -   fi
-    # - fi
 
 .template:publish:s3:mender-monitor:
   variables:
@@ -549,3 +542,49 @@ publish:s3:mender-gateway:automatic:
   rules:
     - if: '$PUBLISH_MENDER_DIST_PACKAGES_AUTOMATIC == "true"'
   extends: .template:publish:s3:mender-gateway
+
+.template:publish:s3:latest:manual:
+  when: manual
+  stage: publish
+  image: debian:buster
+  dependencies:
+    - build:packages:debian:buster:amd64
+    - build:packages:debian:buster:armhf
+    - build:packages:debian:buster:arm64
+    - build:packages:debian:bullseye:amd64
+    - build:packages:debian:bullseye:armhf
+    - build:packages:debian:bullseye:arm64
+    - build:packages:ubuntu:bionic:amd64
+    - build:packages:ubuntu:bionic:armhf
+    - build:packages:ubuntu:bionic:arm64
+    - build:packages:ubuntu:focal:amd64
+    - build:packages:ubuntu:focal:armhf
+    - build:packages:ubuntu:focal:arm64
+  before_script:
+    - apt update && apt install -yyq awscli
+    - *publish_helper_functions
+  script:
+    - echo "Publishing "latest" package for ${PUBLISH_PACKAGE_PREFIX} to s3://${S3_BUCKET_NAME_PRIVATE}/${PUBLISH_PACKAGE_S3_SUBPATH}/${PUBLISH_PACKAGE_VERSION}/"
+    - if ! is_final_tag "${PUBLISH_PACKAGE_VERSION}"; then
+    -   echo "Attempting to publish a "latest" package for a non final tag!"
+    -   exit 1
+    - fi
+    - find output/commercial -name "${PUBLISH_PACKAGE_PREFIX}*.deb" | while read -r file; do
+    #   Make copy for "latest" to be consumed by get.mender.io script:
+    -   copy_filename=$(basename "$file" | sed 's/_[^\+]*/_latest-1/; s/\+builder[^_]*//')
+    -   aws s3 cp "$file" s3://${S3_BUCKET_NAME_PRIVATE}/${PUBLISH_PACKAGE_S3_SUBPATH}/${PUBLISH_PACKAGE_VERSION}/${copy_filename}
+    - done
+
+publish:s3:latest:manual:mender-monitor:
+  variables:
+    PUBLISH_PACKAGE_PREFIX: "mender-monitor"
+    PUBLISH_PACKAGE_VERSION: "$MENDER_MONITOR_VERSION"
+    PUBLISH_PACKAGE_S3_SUBPATH: "$S3_BUCKET_SUBPATH_MONITOR"
+  extends: .template:publish:s3:latest:manual
+
+publish:s3:latest:manual:mender-gateway:
+  variables:
+    PUBLISH_PACKAGE_PREFIX: "mender-gateway"
+    PUBLISH_PACKAGE_VERSION: "$MENDER_GATEWAY_VERSION"
+    PUBLISH_PACKAGE_S3_SUBPATH: "$S3_BUCKET_SUBPATH_GATEWAY"
+  extends: .template:publish:s3:latest:manual
