chore: Change dependabot prefix
Ticket: QA-412
Signed-off-by: Mikael Torp-Holte <mikael.torp-holte@northern.tech>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,13 +1,13 @@
 version: 2
 updates:
   - commit-message:
-      prefix: "Changelog:All"
+      prefix: "chore: "
     directory: /tests
     package-ecosystem: pip
     schedule:
       interval: weekly
   - commit-message:
-      prefix: "Changelog:All"
+      prefix: "chore: "
     directory: /
     package-ecosystem: gitsubmodule
     schedule:
